get endpoint and tests #802